@@ -1,5 +1,7 @@
 = master
 
+* Deprecate using content_for multiple times with the same key in the content_for plugin unless :append plugin option is used (jeremyevans)
+
 * Deprecate use of :host matcher with regexp value in header_matchers plugin without :host_matcher_captures app option (jeremyevans)
 
 * Deprecate view_options plugin locals handling, move to the new branch_locals plugin (jeremyevans)
